--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -80,7 +80,7 @@ main h2 {
   font-family: Helvetica, Arial, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", Sans-Serif;
   text-align: center;
   padding: 20px 0 15px;
-  line-height: 1.5;
+  line-height: 1.3;
 }
 main h2 .font-en {
   font-size: 6rem;
@@ -90,7 +90,7 @@ main h2 .font-en {
 .support-menu {
   display: flex;
   justify-content: center;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 .support-menu_btn {
   background: var(--main-color);
@@ -99,7 +99,7 @@ main h2 .font-en {
   padding: 30px;
   margin: 0 2%;
   color: var(--text-color);
-  width: 40%;
+  width: 450px;
   text-align: center;
   position: relative;
   z-index: 1;
