--- a/src/main/resources/templates/bodyCondition.html
+++ b/src/main/resources/templates/bodyCondition.html
@@ -10,11 +10,32 @@
 	href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.7/dist/css/splide.min.css">
 <link rel="stylesheet" th:href="@{/css/common.css}">
 <link rel="stylesheet" th:href="@{/css/reset.css}">
+<link rel="stylesheet" th:href="@{/css/user.css}">
 </head>
 <body>
-	<h1>体重登録</h1>
-	<form action="" method="post" enctype="multipart/form-data">
-		<th:block th:object="${weightBmi}">
+	<header>
+		<div class="inner">
+			<h1>
+				<a th:href="@{/ }" class="logo"><img
+					th:src="@{/images/ttl_logo.png}"></a>
+			</h1>
+			<nav class="navigation">
+				<ul role='list'>
+					<li><a th:href="@{/mypage}">マイページ</a></li>
+					<li><a th:href="@{/user/logout}">ログアウト</a></li>
+				</ul>
+			</nav>
+		</div>
+	</header>
+	<main>
+		<div class="inner">
+			<h2>
+				<span class="font-en">Record Body</span><br>カラダを記録する
+			</h2>
+			
+		<form action="" method="post" enctype="multipart/form-data">
+			
+			<th:block th:object="${weightBmi}">
 			<p>日付：
 				<input type="date" th:field="*{date}" />
 			</p>
@@ -22,9 +43,9 @@
 				<input type="text" th:field="*{userWeight}" />
 				kg
 			</p>
-		</th:block>	
+			</th:block>	
 		
-		<th:block th:object="${image}">
+			<th:block th:object="${image}">
 			<p>画像を選択してください</p>
 		
 				<input type="file" name="upload" />
@@ -34,13 +55,12 @@
 				<p>
 					今日の一言： <input type="text" th:field="*{memo}" />
 				</p>
-		</th:block>
+			</th:block>
 		
-		<p><input type="submit" th:value="記録する" id="completion" /></p>
-	</form>
-	
-	<p><a th:href="@{/mypage}">My Pageへ</a></p>
-	
+			<p><input type="submit" th:value="記録する" id="completion" /></p>
+		</form>
+		</div>
+	</main>
 	<footer>
 		<small>Copyright 2024 TRECORD</small>
 	</footer>
