--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -19,11 +19,11 @@
 					th:src="@{/images/ttl_logo.png}"></a>
 			</h1>
 			<nav class="navigation">
-				<ul role='list' th:if="${user.loginId != null}">
+				<ul role='list' th:if="${user.userId != null}">
 					<li><a th:href="@{/mypage}">マイページ</a></li>
 					<li><a th:href="@{/user/logout}">ログアウト</a></li>
 				</ul>
-				<ul role='list' th:unless="${user.loginId != null}">
+				<ul role='list' th:unless="${user.userId != null}">
 					<li><a th:href="@{/user/register}">新規会員登録</a></li>
 					<li><a th:href="@{/user/login}">ログイン</a></li>
 				</ul>
@@ -32,22 +32,21 @@
 	</header>
 	<main>
 		<div class="inner">
-			<th:block th:object="${user}">
-				<p th:errors="*{loginId}"></p>
-				<p th:errors="*{loginPass}"></p>
-			</th:block>
 			<!-- h2要素のテキストを動的に設定 -->
-			<h2 th:if="${user.loginId != null}">
+			<h2 th:if="${user.userId != null}">
 				<span class="font-en">Edit</span><br>編集
 			</h2>
-			<h2 th:unless="${user.loginId != null}">
+			<h2 th:unless="${user.userId != null}">
 				<span class="font-en">Sign Up</span><br>ユーザー登録
 			</h2>
+			
 			<form action="" method="post" enctype="multipart/form-data"
 				th:object="${user}">
+				<p th:errors="*{loginId}"></p>
 				<p>
 					<span>ログインID:</span><input type="text" th:field="*{loginId}" />
 				</p>
+				<p th:errors="*{loginPass}"></p>
 				<p>
 					<span>パスワード:</span><input type="text" th:field="*{loginPass}" />
 				</p>
