--- a/src/main/resources/templates/recordEdit.html
+++ b/src/main/resources/templates/recordEdit.html
@@ -2,14 +2,42 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>画像編集</title>
+<link
+	href="https://fonts.googleapis.com/css2?family=Prompt:wght@700&display=swap"
+	rel="stylesheet" />
+<link rel="stylesheet"
+	href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.7/dist/css/splide.min.css">
+<link rel="stylesheet" th:href="@{/css/common.css}">
+<link rel="stylesheet" th:href="@{/css/reset.css}">
+<link rel="stylesheet" th:href="@{/css/user.css}">
 </head>
 <body>
-	<p>画像を選択してください</p>
+	<header>
+		<div class="inner">
+			<h1>
+				<a th:href="@{/ }" class="logo"><img
+					th:src="@{/images/ttl_logo.png}"></a>
+			</h1>
+			<nav class="navigation">
+				<ul role='list'>
+					<li><a th:href="@{/mypage}">マイページ</a></li>
+					<li><a th:href="@{/user/logout}">ログアウト</a></li>
+				</ul>
+			</nav>
+		</div>
+	</header>
+	<main>
+	<div class="inner">
+		<h2>
+				<span class="font-en">Edit</span><br>編集
+			</h2>
 		<form action="" method="post" enctype="multipart/form-data"
 			th:object="${image}">
+			<p>画像を選択してください</p>
 			<input type="file" name="upload" />
-	
+			<img th:if="${image.imgName ne null}"
+					th:src="@{/uploads/{name}(name=${image.imgName})}" alt="" />
 			<p>[[${msg}]]</p>
 	
 			<p>
@@ -20,9 +48,14 @@
 		</form>
 	
 		<p>
-			<a th:href="@{/mypage}">My Pageへ</a>
+			<a class="setting" th:href="@{/mypage}">マイページへ</a>
 		</p>
-		
+		</div>
+		</main>
+	<footer>
+		<small>Copyright 2024 TRECORD</small>
+	</footer>
+
 	<script
 		src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	<script th:src="@{/js/alert.js}"></script>
