もう一度登録するページ修正 yamada

--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -18,6 +18,7 @@
 		</h1>
 		<nav class="navigation">
 			<ul role='list'>
+				<li><a th:href="@{/ }">トップ</a></li>
 				<li><a th:href="@{/user/logout}">ログアウト</a></li>
 			</ul>
 		</nav>
