--- a/src/main/resources/templates/recordDone.html
+++ b/src/main/resources/templates/recordDone.html
@@ -10,6 +10,7 @@
 	href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.7/dist/css/splide.min.css">
 <link rel="stylesheet" th:href="@{/css/common.css}">
 <link rel="stylesheet" th:href="@{/css/reset.css}">
+<link rel="stylesheet" th:href="@{/css/user.css}">
 </head>
 <body>
 	<header>
@@ -30,8 +31,8 @@
 		<h2>
 			<span class="font-en">Well Dane!</span><br>登録完了
 		</h2>
-	<p><a th:href="@{/record}">もう一度登録する</a></p>
-	<p class="back_btn"><a th:href="@{/mypage}">戻る</a></p>
+	<p><a class="setting" th:href="@{/record}">もう一度登録する</a></p>
+	<p><a class="setting" th:href="@{/mypage}">戻る</a></p>
 	</main>
 <footer>
 		<small>Copyright 2024 TRECORD</small>
