バイク「km」を追加

--- a/src/main/resources/templates/record.html
+++ b/src/main/resources/templates/record.html
@@ -63,7 +63,7 @@
 						<!-- #numbers.sequence　繰り返しの最初の数と最後の数を記載 -->
 						<option th:each="i : ${#numbers.sequence(1, numCount)}"
 							th:value="${i}">[[${i}]]</option>
-					</select> 回
+					</select> 回/km
 				</p>
 
 				<p>
