--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -54,10 +54,10 @@
       			<span class="font-en">Record</span><br>記録をする
       		</h2>
       		<div class="support-menu">
-      			<a th:href="@{/bodyCondition}" class="support-menu_btn">
+      			<a th:href="@{/bodyCondition}" class="support-menu_btn body">
       				<p>カラダ記録</p>
       			</a>
-                  <a th:href="@{/record}" class="support-menu_btn">
+                  <a th:href="@{/record}" class="support-menu_btn training">
       				<p>トレーニング記録</p>
       			</a>
       		</div>
