mypage不足データを追加

--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -99,7 +99,7 @@
             				</tr>
             				<tr>
             					<th>標準BMI</th>
-            					<td></td>
+            					<td>[[*{healthyBmi}]]</td>
             				</tr>
                         </table>
                     </div>
