--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -128,7 +128,7 @@ main h2 .font-en {
   z-index: 2;
   width: 65%;
   height: 100%;
-  top: -15%;
+  top: -5%;
   left: 2%;
   background-repeat: no-repeat;
   background-size: 50%;
@@ -140,7 +140,8 @@ main h2 .font-en {
 .support-menu_btn.weight::before {
   background-image: url(../images/menu-icon2.png);
   background-size: 45%;
-  top: -5%;
+  top: 4%;
+  width: 58%;
 }
 .support-menu_btn.diagnosis::before {
   background-image: url(../images/menu-icon3.png);
